--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,10 @@
 {
     "files.associations": {
         "string.h": "c",
-        "err.h": "c"
+        "err.h": "c",
+        "litesocket.h": "c",
+        "ssl.h": "c",
+        "unistd.h": "c",
+        "random.h": "c"
     }
 }
