almost complete api. streaming now works

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,12 @@
         "litesocket.h": "c",
         "ssl.h": "c",
         "unistd.h": "c",
-        "random.h": "c"
+        "random.h": "c",
+        "vector": "c",
+        "memory": "c",
+        "optional": "c",
+        "string_view": "c",
+        "string": "c",
+        "system_error": "c"
     }
 }
