Added youtube search functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "optional": "c",
         "string_view": "c",
         "string": "c",
-        "system_error": "c"
+        "system_error": "c",
+        "curl.h": "c"
     }
 }
