Implemented play command
Also moved youtube-utils to discord-utils/youtube as its the only dependent

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
         "string_view": "c",
         "string": "c",
         "system_error": "c",
-        "curl.h": "c"
+        "curl.h": "c",
+        "discord-utils.c": "cpp"
     },
     "editor.tabSize": 2
 }
