--- a/src/discord-in-c/discord-frontend/youtube/Makefile
+++ b/src/discord-in-c/discord-frontend/youtube/Makefile
@@ -1,7 +1,7 @@
 all: youtube-func
 
-youtube-func: youtube-func.h youtube-func.c youtube-util.h youtube-util.c
-	gcc -o youtube-func.o youtube-func.c youtube-util.c -lcurl -g -Wall -Wextra -Wno-unused-parameter -fsanitize=address -pedantic
+youtube-func: youtube-func.cpp
+	gcc -o youtube-func.o youtube-func.cpp -lcurl -g -Wall -Wextra -Wno-unused-parameter -fsanitize=address -pedantic
 
 format:
 	clang-format-10 --style=llvm -i *.h
