media.c is almost done; Threaded playback function now works. in progress -> queueing, seeking, other media player functions....

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "sbuf.h": "c",
         "sodium.h": "c",
         "media.h": "c",
-        "opus.h": "c"
+        "opus.h": "c",
+        "wait.h": "c"
     }
 }
