--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -1,7 +1,8 @@
 all: test2
 
-test2: test2.c discord.c discord.h strmap.c strmap.h
-	gcc -o test2 test2.c discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -fsanitize=address -lpthread -lssl -lcrypto
+test2: test2.c media.c media.h discord.c discord.h strmap.c strmap.h
+	gcc -o test2 test2.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -fsanitize=address -lpthread -lssl -lcrypto -lsodium -lopus -logg
+
 
 format:
 	clang-format-10 --style=llvm -i discord.h
