Fixed crashes due to SIGPIPE from heartbeat. Added voice auto reconnection. Fixed hotswapping voice channel through discord.

--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -1,10 +1,12 @@
 all: test2
 
 test2: test2.c media.c media.h discord.c discord.h strmap.c strmap.h
-	gcc -o test2 test2.c youtube/youtube-func.h youtube/youtube-func.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -fsanitize=address -lpthread -lssl -lcrypto -lsodium -lopus -logg -lcurl
+	gcc -o test2 test2.c youtube/youtube-func.h youtube/youtube-func.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -lpthread -lssl -lcrypto -lsodium -lopus -logg -lcurl -fsanitize=address
 
 
 format:
 	clang-format-10 --style=llvm -i discord.h
 	clang-format-10 --style=llvm -i discord.c
 	clang-format-10 --style=llvm -i test2.c
+
+#-fsanitize=address
