fix minor mem leak

--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -1,7 +1,7 @@
 all: test2
 
 test2: test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h strmap.c strmap.h
-	gcc -o test2 -DBOT_PREFIX=\"$${BOT_PREFIX:--}\" test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -lpthread -lssl -lcrypto -lsodium -lopus -logg
+	gcc -o test2 -DBOT_PREFIX=\"$${BOT_PREFIX:--}\" test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg
 
 
 format:
