added a permissions system where you can add DJ roles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "unordered_set": "c",
         "initializer_list": "c",
         "valarray": "c",
-        "sbuf.structs.h": "c"
+        "sbuf.structs.h": "c",
+        "cstring": "c"
     }
 }
