added new env var to fix heroku. move docker to ubuntu because arch image is slightly broken. deleted bot prefix macro in makefile.

--- a/app.json
+++ b/app.json
@@ -11,6 +11,10 @@
       },
       "TOKEN":{
         "description": "Discord bot token."
+      },
+      "BOT_PREFIX":{
+        "description": "Discord bot command prefix.",
+        "value": "-"
       }
     }
   
