--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest #flake8
+        pip install pytest requests #flake8
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 #     - name: Lint with flake8
 #       run: |
