Implemented file sending and sending logs

--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -3,8 +3,8 @@ all: test2
 test2: test2.c cJSON.h cJSON.c log.h log.c utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c
 	gcc -o test2 test2.c cJSON.h cJSON.c -DLOG_USE_COLOR log.h log.c utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm
 
-sanitize: test2.c cJSON.h cJSON.c log.h utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c
-	gcc -o test2 test2.c cJSON.h cJSON.c -DLOG_USE_COLOR log.h utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm
+sanitize: test2.c cJSON.h cJSON.c log.h log.c utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c
+	gcc -o test2 test2.c cJSON.h cJSON.c -DLOG_USE_COLOR log.h log.c utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -fsanitize=address
 
 
 format:
