--- a/src/discord-in-c/fetch/Makefile
+++ b/src/discord-in-c/fetch/Makefile
@@ -1,2 +1,5 @@
-youtube_fetch: youtube_fetch.c
-	gcc -c youtube_fetch.c -lcurl -g -Wall -Wextra -Wno-unused-parameter -fsanitize=address -pedantic
+
+
+youtube_fetch:               ../test2.c ../cJSON.h ../cJSON.c ../media.c ../media.h ../discord.c ../discord.h ../litesocket/litesocket.h ../litesocket/litesocket.c ../strmap.h ../strmap.c ../sbuf.h ../sbuf.c
+	gcc -o test2 ../test2.c ../cJSON.h ../cJSON.c ../media.c ../media.h ../discord.c ../discord.h ../litesocket/litesocket.h ../litesocket/litesocket.c ../strmap.h ../strmap.c ../sbuf.h ../sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl -fsanitize=address
+
