Completed fetch_playlist

--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -1,10 +1,10 @@
 all: test2
 
-test2: test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c
-	gcc -o test2 test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm
+test2: test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c
+	gcc -o test2 test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl
 
-sanitize: test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c
-	gcc -o test2 test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -fsanitize=address
+sanitize: test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c
+	gcc -o test2 test2.c cJSON.h cJSON.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl -fsanitize=address
 
 
 format:
