Added unit test for parser and updated deployment files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "cstring": "c",
         "discord.structs.h": "c",
         "easy_fetch.c": "c",
-        "easy_fetch.h": "c"
+        "easy_fetch.h": "c",
+        "youtube_fetch.h": "c"
     }
 }
