Implemented title fetching for playlists

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "discord.structs.h": "c",
         "easy_fetch.c": "c",
         "easy_fetch.h": "c",
-        "youtube_fetch.h": "c"
+        "youtube_fetch.h": "c",
+        "*.tcc": "c"
     }
 }
