--- a/.github/workflows/youtube-checks.yml
+++ b/.github/workflows/youtube-checks.yml
@@ -17,4 +17,4 @@ jobs:
       run: sudo apt-get install libcurl4-openssl-dev
     - name: Checks
       working-directory: ./src/tests
-      run: make
+      run: make tests
