Cleaned up more warnings in test2.c, media.c, and log.c

--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -8,7 +8,7 @@ sanitize: test2.c cJSON.h cJSON.c log.h log.c utils.h media.c media.h discord.c 
 	gcc -o test2 test2.c cJSON.h cJSON.c -DLOG_USE_COLOR log.h log.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -O3 -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl -fsanitize=address
 
 sanitize-ubuntu: test2.c cJSON.h cJSON.c log.h log.c utils.h media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c
-	gcc -o test2 test2.c cJSON.h cJSON.c -DLOG_USE_COLOR log.h log.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl
+	gcc -o test2 test2.c cJSON.h cJSON.c -DLOG_USE_COLOR log.h log.c media.c media.h discord.c discord.h litesocket/litesocket.h litesocket/litesocket.c strmap.h strmap.c sbuf.h sbuf.c youtube_fetch.h youtube_fetch.c -g -Wall -Wextra -Wno-unused-parameter -pedantic -lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl -fsanitize=address
 
 
 format:
