--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,26 +4,17 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "echo",
-            "type": "shell",
-            "command": "echo Hello"
-        },
-        {
             "label": "make and run",
             "type": "shell",
-            "command": "make -B -C src/discord-in-c/ && export $(grep -v '^#' .env | xargs) && src/discord-in-c/test2",
+            "command": "make -B -C src/discord-in-c/ sanitize && export $(grep -v '^#' .env | xargs) && src/discord-in-c/test2",
             "problemMatcher": [],
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
+
         },
         {
             "label": "docker build and run",
             "type": "shell",
             "command": "docker run build . -t groov-in-c && docker run groov-in-c --env-file .env",
             "group": "build"
-            
         }
     ]
 }
