added back -g compiler flag for more detail from sanitizer when crash. Fix potential crash due to race condition cause youtube object pointer to be null from sbuf peek end value in threaded play

--- a/src/discord-in-c/Makefile
+++ b/src/discord-in-c/Makefile
@@ -1,6 +1,6 @@
 OBJDIR=obj
 CC=gcc
-CFLAGS=-Wall -Wextra -Wno-unused-parameter -O2
+CFLAGS=-g -Wall -Wextra -Wno-unused-parameter -O2
 MACROS=-DLOG_USE_COLOR
 LFLAGS=-lpthread -lssl -lcrypto -lsodium -lopus -logg -lm -lcurl
 
